tests/snapshots/pager__pager_whitespace_only_input_advances_page.snap
---
source: tests/pager.rs
expression: rendered
---
== session: default ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "line <- paste(rep(\"x\", 200), collapse = \"\"); for (i in 1:200) cat(sprintf(\"line%04d %s\\n\", i, line))\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "line0001 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\n"
    },
    {
      "type": "text",
      "text": "--More-- (140p, 0.5%, @0..210/42000)"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "   \n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "line0002 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\n"
    },
    {
      "type": "text",
      "text": "--More-- (139p, 1.0%, @210..420/42000)"
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":q\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "(END, 1.0%, @210..420/42000)"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
