tests/snapshots/pager__pager_whitespace_only_input_advances_page@transcript.snap
---
source: tests/pager.rs
expression: transcript
---
== session: default ==
1) r_repl timeout_ms=30000
>>> line <- paste(rep("x", 200), collapse = ""); for (i in 1:200) cat(sprintf("line%04d %s\n", i, line))
<<< > line <- paste(rep("x", 200), collapse = ""); for (i in 1:200) cat(sprintf("line%04d %s\n", i, line))
<<< 
<<< --More-- (140p, 0.2%, @0..103/42103)

2) r_repl timeout_ms=30000
>>>    
<<< line0001 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
<<< 
<<< --More-- (140p, 0.7%, @103..313/42103)

3) r_repl timeout_ms=30000
>>> :q
<<< (END, 0.7%, @103..313/42103)
<<< >
